# desafio

./: .gitattributes  .gitignore  Makefile  README 2.md  docker-compose.yaml
backend/: CONTRIBUTING.md  Dockerfile  Makefile  README 2.md  config.json  docker-compose.yaml  env_sample  generate_docs.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 11955efdf2db_.py  184d6a7932b7_.py  5569c03c5982_.py  757d7082bd5a_.py  e08287145323_.py
backend/app/: __init__.py  configuration.py  custom_types.py  db_session.py  exceptions.py  main.py  open_api_generate.py
backend/app/insight/: crud.py  main.py  models.py  schemas.py
backend/tests/: __init__.py
